cupt2 (2.0.0~beta2~) UNRELEASED; urgency=low

  * lib:
    - cache/binaryversion:
      - 'isInstalled': fixed crash when a version has no sources.
    - system/resolvers/native:
      - Don't attempt to synchronize installed versions, reverting to the
        behavior of cupt 1.x.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 07 Mar 2011 12:09:47 +0200

cupt2 (2.0.0~beta1) UNRELEASED; urgency=low

  * console:
    - shell:
      - Restore initial config after every command.
      - Fixed "eating" some one-letter options.
    - Action preview prompt:
      - For removed/purged packages which have an 'automatically installed'
        flag set, append '(a)' to package names.
      - Added an ability to specify additional package expressions and restart
        the solving process (choice 'a'). (Closes: #605416)
      - Treat downgrades as dangerous actions.
      - Ask for the confirmation for dangerous actions only if user has
        accepted the solution.
      - Added a help command.
  * lib:
    - system/resolver:
      - New result type 'Offer'.
      - 'Offer': provide the info about unsatisfied soft dependencies.
      - 'Reason': new method 'toString'.
    - system/resolvers/native:
      - Filter out changes of conflicting packages which don't
        effectively change the situation.
      - Use only reliable information from source packages for synchronizing
        source versions.
      - Reworked underlying data structures.
      - New configurable score calculation system.
      - Do not additionally stick packages except of changed ones, it may hide
        some solution in very rare cases. Fixes a regression since 0.2.2.
      - When no solutions were found, throw an error with a solution tree to
        show why.
      - 'resolve': fixed a wrong result when being called multiple times on
        the same object.
      - 'resolve': added a warning about dropped solutions.
    - config:
      - Deleted option