@@ -6,6 +6,7 @@ cupt2 (2.0.0~beta2~) UNRELEASED; urgency=low
     - system/resolvers/native:
       - Don't attempt to synchronize installed versions, reverting to the
         behavior of cupt 1.x.
+      - Optimized solutions' selecting and dropping.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 07 Mar 2011 12:09:47 +0200
 
